2007-08-24  Thien-Thi Nguyen  <ttn@gnuvola.org>

	* play/zone.el (zone-pgm-rat-race): New func.
	(zone-programs): Add `zone-pgm-rat-race'.

2007-08-24  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/byte-opt.el (byte-optimize-if): Don't presume `clause' is
	a list.

2007-08-24  Thien-Thi Nguyen  <ttn@gnuvola.org>

	* progmodes/hideshow.el (hs-match-data): Delete alias.
	(hs-hide-block-at-point, hs-find-block-beginning)
	(hs-show-block): Use `match-data' directly.

2007-08-24  Martin Rudalics  <rudalics@gmx.at>

	* format.el (format-alist): Fix typo in doc-string.

2007-08-24  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-local-host-p): New defun.
	(tramp-handle-file-local-copy, tramp-handle-write-region):
	Implement fast track when being on the local host.
	(tramp-file-name-handler): Don't set "started" property.  It shall
	be reserved for the "ftp" method.
	(tramp-make-copy-program-file-name): Use `tramp-file-name-real-host'.

	* net/tramp-ftp.el (top): Autoload `tramp-set-connection-property'.
	(tramp-ftp-file-name-handler): Set "started" property.

2007-08-24  Ulrich Mueller  <ulm@gentoo.org>  (tiny change)

	* files.el (backup-buffer-copy): Don't wrap delete in
	condition-case, only try to delete if file exists.

2007-08-24  Glenn Morris  <rgm@gnu.org>

	* files.el (backup-buffer-copy): Revert 2007-08-22 change.

	* startup.el (tutorial-directory): Set with eval-at-startup so it
	gets the right value in an installed Emacs.

2007-08-24  Nikolaj Schumacher  <n_schumacher@web.de>  (tiny change)

	* emacs-lisp/eldoc.el (eldoc-highlight-function-argument): New face.
	(eldoc-highlight-function-argument): Use it.

2007-08-23  Masatake YAMATO  <jet@gyve.org>

	* progmodes/cc-fonts.el (gtkdoc-font-lock-doc-comments):
	Highlight name of parameters in document body.

2007-08-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/bytecomp.el (byte-compile-output-docform)